# rs274letter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  input.ngc  output.json  test.ngc  test.sh
conf/: letter.md
rs274letter/: CMakeLists.txt  Exception.h  InsideFunction.cc  InsideFunction.h  Parser.cc  Parser.h  Serializer.cc  Serializer.h  Tokenizer.cc  Tokenizer.h  macro.h  util.cc  util.h
tests/: CMakeLists.txt  general_test.cc  test_calc.cc
tests/input/: test_calc.ngc  test_if.ngc  test_relation.ngc  test_sub.ngc  test_while.ngc
